--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -15,7 +15,7 @@
            
         </div>
     </div>
-    <hr>
+    <!-- <hr>
     <div class="row">
         <div class="col-xl-3 col-lg-6">
             <app-stat [bgClass]="'card-primary'" [icon]="'fa-comments'" [count]="26" [label]="'New Comments!'" ></app-stat>
@@ -29,37 +29,42 @@
         <div class="col-xl-3 col-lg-6">
             <app-stat [bgClass]="'card-danger'" [icon]="'fa-support'" [count]="13" [label]="'New Tickets!'"></app-stat>
         </div>
-    </div>
-    <hr />
-    <ngb-alert [type]="alert.type" (close)="closeAlert(alert)" *ngFor="let alert of alerts">{{ alert.message }}</ngb-alert>
+    </div> -->
+    <!-- <hr /> -->
+    <!-- <ngb-alert [type]="alert.type" (close)="closeAlert(alert)" *ngFor="let alert of alerts">{{ alert.message }}</ngb-alert> -->
     <hr />
     <div class="row">
-        <div class="col-lg-8">
+        <div class="col-lg-12">
             <div class="card card-default">
                 <div class="card-header">
-                    <i class="fa fa-clock-o fa-fw"></i> Responsive Timeline
+                    <i class="fa fa-user-circle-o fa-fw"></i> Find Hopers 
                 </div>
+
+                <app-House></app-House>
                 <!-- /.card-header -->
-                <app-timeline></app-timeline>
+                <!-- <app-timeline></app-timeline> -->
                 <!-- /.card-body -->
+
+
             </div>
             <!-- /.card -->
         </div>
         <!-- /.col-lg-8 -->
-        <div class="col-lg-4">
+        <!-- <div class="col-lg-4">
             <div class="card card-default">
                 <div class="card-header">
                     <i class="fa fa-bell fa-fw"></i> Notifications card
-                </div>
+                </div> -->
                 <!-- /.card-header -->
-                <app-notification></app-notification>
+                <!-- <app-notification></app-notification> -->
                 <!-- /.card-body -->
-            </div>
+            <!-- </div> -->
             <!-- /.card -->
+           
 
-            <app-chat></app-chat>
+            <!-- <app-chat></app-chat> -->
             <!-- /.card .chat-card -->
-        </div>
+        <!-- </div> -->
         <!-- /.col-lg-4 -->
     </div>
 </div>
