--- a/src/app/layout/helperDetails/helper-details.component.scss
+++ b/src/app/layout/helperDetails/helper-details.component.scss
@@ -1,6 +1,19 @@
 .container-hoper-registration {
     display: grid;
-    grid-gap: 30px;
+    grid-gap: 50px;
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-    grid-template-rows: repeat(2, 100px);
+    grid-template-rows: repeat(3, 100px);
+}
+
+.container-hoper-registration-1 {
+    display: grid;
+    grid-gap: 30px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(1, 100px);
+}
+.container-hoper-registration-address {
+    display: grid;
+    grid-gap: 30px;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(1, 100px);
 }
