--- a/src/app/layout/hoper-details/hoper-details.component.html
+++ b/src/app/layout/hoper-details/hoper-details.component.html
@@ -1,66 +1,66 @@
-<H3>
-    Hopers registration Form </H3>
+<div class="row">
+    <div class="col-xl-12 text-xs-center">
+            <div class="card mb-3">
+       
+                <div class="card-header">
+                <i class="fa fa-user-circle-o fa-fw"></i> Hopers registration Form
+            </div>
+        </div>
+    </div>
 
-<div class="row container-hoper-registration">
-    <div class="row container-hoper-registration-1">
-        <div class="form-group">
+    <div class=" card-block col-lg-6">
+        <div class="form-group ">
             <label>Name</label>
-            <input class="form-control" name="name" [(ngModel)]="user.name">
-
+            <input class="form-control col-lg-8" name="name" [(ngModel)]="user.name">
         </div>
         <div class="form-group">
             <label>phone</label>
-            <input class="form-control" name="phone" [(ngModel)]="user.phone">
-
+            <input class="form-control col-lg-8" name="phone" [(ngModel)]="user.phone">
         </div>
         <div class="form-group">
             <label>email</label>
-            <input class="form-control" name="email" [(ngModel)]="user.email">
+            <input class="form-control col-lg-8" name="email" [(ngModel)]="user.email">
         </div>
         <div class="form-group">
             <label>AAdhar Number</label>
-            <input class="form-control" name="email" [(ngModel)]="user.email">
+            <input class="form-control col-lg-8" name="email" [(ngModel)]="user.email">
         </div>
         <div class="form-group">
             <label>Select Your proffession</label>
-            <select class="form-control" name="need" [(ngModel)]="user.need">
+            <select class="form-control col-lg-10" name="need" [(ngModel)]="user.need">
                 <option *ngFor="let hope of hopers" [value]="" hope>{{hope}}</option>
             </select>
         </div>
     </div>
-    <div class="row container-hoper-registration-1">
 
-        <div class="row container-hoper-registration-address">
+    <div class=" card-block col-lg-6">
+        <div>
             <div class="form-group">
                 <label>Addres Line 1</label>
-                <input class="form-control" name="Addres Line 1">
+                <input class="form-control col-lg-10" name="Addres Line 1">
 
             </div>
             <div class="form-group">
                 <label>Addres Line 2</label>
-                <input class="form-control" name="Addres Line 2">
+                <input class="form-control col-lg-10" name="Addres Line 2">
 
             </div>
             <div class="form-group">
                 <label>Street</label>
-                <input class="form-control" name="Street">
+                <input class="form-control col-lg-10" name="Street">
             </div>
             <div class="form-group">
                 <label>Taluk</label>
-                <input class="form-control" name="taluk">
+                <input class="form-control col-lg-10" name="taluk">
             </div>
             <div class="form-group">
                 <label>Pincode</label>
-                <input class="form-control" name="taluk">
+                <input class="form-control col-lg-10" name="taluk">
             </div>
         </div>
-
     </div>
-</div>
-<h3>
-    need Domain for Hopers....
-</h3>
 
+</div>
 
 
 <!-- <form role="form">
